wasm/char_to_line_compile.log
emcc: error: /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c: No such file or directory ("/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c" was expected to be an input file, based on the commandline arguments provided)
/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c:6:5: error: second parameter of 'main' (argument array) must be of type 'char **'
    6 | int main(int argc, char argv) {
      |     ^
1 error generated.
emcc: error: '/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/bin/clang -target wasm32-unknown-emscripten -fignore-exceptions -mllvm -combiner-global-alias-analysis=false -mllvm -enable-emscripten-sjlj -mllvm -disable-lsr --sysroot=/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/sysroot -DEMSCRIPTEN -Werror=implicit-function-declaration -Xclang -iwithsysroot/include/fakesdl -Xclang -iwithsysroot/include/compat -O3 -Wall -ffast-math -DPROGRESS -DLINUX -I/home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src /home/jake/Desktop/Uni/Bolsa/gto-wasm-app/gto/src/main_wrapper.c -c -o /tmp/emscripten_temp_6kcm86tm/main_wrapper_1.o' failed (returned 1)
cache:INFO: generating system asset: symbol_lists/c2372292230ac965749878899fcad35bccd76b89.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/c2372292230ac965749878899fcad35bccd76b89.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/9ce5668c99aec1431672ceda2f5f01a0428a787a.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/9ce5668c99aec1431672ceda2f5f01a0428a787a.json" for subsequent builds)
cache:INFO:  - ok
cache:INFO: generating system asset: symbol_lists/ee15dfea4635c9876ea4e10b80b9d4d8d46d8ad6.json... (this will be cached in "/home/jake/Desktop/Uni/Bolsa/emsdk/upstream/emscripten/cache/symbol_lists/ee15dfea4635c9876ea4e10b80b9d4d8d46d8ad6.json" for subsequent builds)
cache:INFO:  - ok
